feat/pt_BR_validator_&_customer
